# ChangeLog for app-misc/cl-gnome-meta
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Jan 2012; <guest@gentoo.org> +cl-gnome-meta-3.2.ebuild:
  version bump

*cl-gnome-meta-2.32-r2 (02 Dec 2011)

  02 Dec 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-gnome-meta-2.32-r1.ebuild, +cl-gnome-meta-2.32-r2.ebuild:
  remove app-admin/pessulus, gnome-extra/bug-buddy

*cl-gnome-meta-2.32-r1 (22 Nov 2011)

  22 Nov 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-gnome-meta-2.28.ebuild, -cl-gnome-meta-2.28-r1.ebuild,
  -cl-gnome-meta-2.28-r2.ebuild, -cl-gnome-meta-2.32.ebuild,
  +cl-gnome-meta-2.32-r1.ebuild:
  Add app-admin/system-config-printer-gnome and remove
  net-print/gnome-cups-manager

*cl-gnome-meta-2.32 (24 Feb 2011)

  24 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-gnome-meta-2.32.ebuild:
  Version bump.

*cl-gnome-meta-2.28-r3 (31 Jan 2011)

  31 Jan 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-gnome-meta-2.28-r3.ebuild:
  Added calculate_nonetwork USE flag

*cl-gnome-meta-2.28-r2 (14 Jan 2011)

  14 Jan 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cl-gnome-meta-2.28-r2.ebuild:
  Add gnome-extra/sensors-applet IssueID #200.

*cl-gnome-meta-2.28-r1 (08 Nov 2010)

  08 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-gnome-meta-2.28-r1.ebuild:
  Removed gnome-base/gnome-volume-manager

*cl-gnome-meta-2.28 (08 Jun 2010)

  08 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-gnome-meta-2.28.ebuild, -cl-gnome-meta-10.5.83.ebuild:
  Change version.

*cl-gnome-meta-10.5.83 (08 Jun 2010)

  08 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cl-gnome-meta-10.5.83.ebuild:
  Init gnome-meta.
