@@ -1,4 +1,4 @@
-EBUILD cldg-meta-11.12-r2.ebuild 1211 RMD160 3cb64f0c32e2cc42c232d78d837029f0a60dd66c SHA1 47808e8f6cec5912778362a1e13c69d6e277e1d6 SHA256 705dfe00b0e4253c4ced5f4e951b12e1b8e01378898dbbca973bff195df91a07
+EBUILD cldg-meta-11.12-r3.ebuild 1211 RMD160 3cb64f0c32e2cc42c232d78d837029f0a60dd66c SHA1 47808e8f6cec5912778362a1e13c69d6e277e1d6 SHA256 705dfe00b0e4253c4ced5f4e951b12e1b8e01378898dbbca973bff195df91a07
 EBUILD cldg-meta-11.12.ebuild 1282 RMD160 f8cb063edaa57726054b3f4d723327f8d18c48d0 SHA1 db8ff1189fcc0d0fce2bca5519cd10a067ad4790 SHA256 61f3b4be8520f164aee6ffde098abdff01073a4a0ba77b5db6cd2abe23433206
 MISC ChangeLog 4110 RMD160 458808307c2fdcb0a460183f1e4ab3b09411ba63 SHA1 69e991fcffb5cbd425ff254548ce8a78cfc5f160 SHA256 c4d0eeabed60b5c84761f5a43d331d226e6c2f90c043461dc595d45e96930a84
 MISC metadata.xml 263 RMD160 596dddaf55974cdaa7642643631b4e506681adde SHA1 56cba5a8dbf3977d7891ec138b75e8fe3eb6fadd SHA256 0a6e854923033ffffca2b1ce19e0b12ae33a4d6a372b2613e3ded5b750899526
