@@ -1,0 +1,1 @@
+# Calculate append=skip belong()!=&&pkg(app-misc/cldg-meta)!=
