@@ -1,0 +1,6 @@
+# Calculate path=/tmp name=reconfigureGdm exec=/bin/bash ac_install_system!=up&&cl_belong_pkg!=&&pkg(gnome-base/gnome-shell)>=3.2&&pkg(gnome-base/gdm)>=3.2
+
+cl-template -l all --merge gnome-base/gdm &>/dev/null
+cl-template -l all --merge gnome-base/gnome-shell &>/dev/null
+
+true
