@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-gnome-meta-3.2.1-r2 (01 Mar 2012)
+
+  01 Mar 2012; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -cl-gnome-meta-3.2.1-r1.ebuild, +cl-gnome-meta-3.2.1-r2.ebuild:
+  Add removing compiz.
+
   23 Jan 2012; <guest@gentoo.org> +cl-gnome-meta-3.2.ebuild:
   version bump
 
